--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,7 @@ nav ul {
     list-style: none;
     padding: 0;
     margin: 15px 0;
+    align-items: center;
 }
 
 nav ul li a {
@@ -41,6 +42,7 @@ nav ul li a {
     padding: 10px 15px;
     border-radius: 10px;
     transition: background-color 0.3s;
+    margin: 5px 0;
 }
 
 nav ul li a:hover {
@@ -67,13 +69,14 @@ footer {
 button {
     background-color: #28a745;
     color: #fff;
-    padding: 10px 20px;
+    padding: 12px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s;
     font-family: 'Sarabun', sans-serif;
     margin: 25px 10px;
+    width: 100%;
 }
 
 button:hover {
@@ -95,7 +98,8 @@ button:hover {
     justify-content: center;
 }
 .product-image img {
-    width: 250px;
+    width: 100%;
+    max-width: 300px;
     border-radius: 10px;
     transition: transform 0.3s ease;
 }
